--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -341,58 +341,58 @@
     "    mu = 0\n",
     "    sigma = 0.1\n",
     "    \n",
-    "    # SOLUTION: Layer 1: Convolutional. Input = 32x32x3. Output = 28x28x10.\n",
+    "    # Layer 1: Convolutional. Input = 32x32x3. Output = 28x28x10.\n",
     "    conv1_W = tf.Variable(tf.truncated_normal(shape=(5, 5, 3, 10), mean = mu, stddev = sigma))\n",
     "    conv1_b = tf.Variable(tf.zeros(10))\n",
     "    conv1   = tf.nn.conv2d(x, conv1_W, strides=[1, 1, 1, 1], padding='VALID') + conv1_b\n",
     "\n",
-    "    # SOLUTION: Activation.\n",
+    "    # Activation.\n",
     "    conv1 = tf.nn.relu(conv1)\n",
     "    # DROPOUT\n",
     "    conv1 = tf.nn.dropout(conv1, keep_prob)\n",
     "\n",
-    "    # SOLUTION: Pooling. Input = 28x28x10. Output = 14x14x10.\n",
+    "    # Pooling. Input = 28x28x10. Output = 14x14x10.\n",
     "    conv1 = tf.nn.max_pool(conv1, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='VALID')\n",
     "\n",
-    "    # SOLUTION: Layer 2: Convolutional. Output = 10x10x20.\n",
+    "    # Layer 2: Convolutional. Output = 10x10x20.\n",
     "    conv2_W = tf.Variable(tf.truncated_normal(shape=(5, 5, 10, 20), mean = mu, stddev = sigma))\n",
     "    conv2_b = tf.Variable(tf.zeros(20))\n",
     "    conv2   = tf.nn.conv2d(conv1, conv2_W, strides=[1, 1, 1, 1], padding='VALID') + conv2_b\n",
     "    \n",
-    "    # SOLUTION: Activation.\n",
+    "    # Activation.\n",
     "    conv2 = tf.nn.relu(conv2)\n",
     "    # DROPOUT\n",
     "    conv2 = tf.nn.dropout(conv2, keep_prob)\n",
     "\n",
-    "    # SOLUTION: Pooling. Input = 10x10x20. Output = 5x5x20.\n",
+    "    # Pooling. Input = 10x10x20. Output = 5x5x20.\n",
     "    conv2 = tf.nn.max_pool(conv2, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='VALID')\n",
     "\n",
-    "    # SOLUTION: Flatten. Input = 5x5x16. Output = 400.\n",
+    "    # Flatten. Input = 5x5x16. Output = 400.\n",
     "    fc0   = flatten(conv2)\n",
     "    \n",
-    "    # SOLUTION: Layer 3: Fully Connected. Input = 500. Output = 150.\n",
+    "    # Layer 3: Fully Connected. Input = 500. Output = 150.\n",
     "    fc1_W = tf.Variable(tf.truncated_normal(shape=(500, 150), mean = mu, stddev = sigma))\n",
     "    fc1_b = tf.Variable(tf.zeros(150))\n",
     "    fc1   = tf.matmul(fc0, fc1_W) + fc1_b\n",
     "    \n",
-    "    # SOLUTION: Activation.\n",
+    "    # Activation.\n",
     "    fc1    = tf.nn.relu(fc1)\n",
     "    \n",
     "    # DROPOUT\n",
     "    fc1 = tf.nn.dropout(fc1, keep_prob)\n",
     "\n",
-    "    # SOLUTION: Layer 4: Fully Connected. Input = 150. Output = 84.\n",
+    "    # Layer 4: Fully Connected. Input = 150. Output = 84.\n",
     "    fc2_W  = tf.Variable(tf.truncated_normal(shape=(150, 84), mean = mu, stddev = sigma))\n",
     "    fc2_b  = tf.Variable(tf.zeros(84))\n",
     "    fc2    = tf.matmul(fc1, fc2_W) + fc2_b\n",
     "    \n",
-    "    # SOLUTION: Activation.\n",
+    "    # Activation.\n",
     "    fc2    = tf.nn.relu(fc2)\n",
     "    \n",
     "    # DROPOUT\n",
     "    fc2 = tf.nn.dropout(fc2, keep_prob)\n",
     "\n",
-    "    # SOLUTION: Layer 5: Fully Connected. Input = 84. Output = n_classes.\n",
+    "    # Layer 5: Fully Connected. Input = 84. Output = n_classes.\n",
     "    fc3_W  = tf.Variable(tf.truncated_normal(shape=(84, n_classes), mean = mu, stddev = sigma))\n",
     "    fc3_b  = tf.Variable(tf.zeros(n_classes))\n",
     "    logits = tf.matmul(fc2, fc3_W) + fc3_b\n",
